{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 1135,
  "lineage": "3256e296-ba9d-0136-04a3-2875c0087fb5",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:982081069425:internet-gateway/igw-0a0fc7e636d7522e0",
            "id": "igw-0a0fc7e636d7522e0",
            "owner_id": "982081069425",
            "tags": {
              "Name": "EKS-cluster's-igw"
            },
            "tags_all": {
              "Name": "EKS-cluster's-igw"
            },
            "vpc_id": "vpc-0b7ea2b7283b12508"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0a0fc7e636d7522e0",
            "id": "r-rtb-0b4074696d7a657fa1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b4074696d7a657fa",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:982081069425:route-table/rtb-0b4074696d7a657fa",
            "id": "rtb-0b4074696d7a657fa",
            "owner_id": "982081069425",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a0fc7e636d7522e0",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "EKS-cluster's-public-rt"
            },
            "tags_all": {
              "Name": "EKS-cluster's-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b7ea2b7283b12508"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07dd6ddece2afd8ca",
            "route_table_id": "rtb-0b4074696d7a657fa",
            "subnet_id": "subnet-0bdaf87b477126807"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cb9acac7b6a1f2b1",
            "route_table_id": "rtb-0b4074696d7a657fa",
            "subnet_id": "subnet-03c2af8c5458af0ac"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c7feb01e79e2d35d",
            "route_table_id": "rtb-0b4074696d7a657fa",
            "subnet_id": "subnet-05e93622a4b4ceef9"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:982081069425:subnet/subnet-0bdaf87b477126807",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "172.16.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bdaf87b477126807",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "982081069425",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "EKS-cluster's-public-1",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "EKS-cluster's-public-1",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0b7ea2b7283b12508"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:982081069425:subnet/subnet-03c2af8c5458af0ac",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "172.16.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03c2af8c5458af0ac",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "982081069425",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "EKS-cluster's-public-2",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "EKS-cluster's-public-2",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0b7ea2b7283b12508"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:982081069425:subnet/subnet-05e93622a4b4ceef9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "172.16.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05e93622a4b4ceef9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "982081069425",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "EKS-cluster's-public-3",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "EKS-cluster's-public-3",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0b7ea2b7283b12508"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:982081069425:vpc/vpc-0b7ea2b7283b12508",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-0924e6a4d1ab29108",
            "default_route_table_id": "rtb-004387df5cef9b5f5",
            "default_security_group_id": "sg-0bf9c90fec7f5056b",
            "dhcp_options_id": "dopt-0a6ebbe4178a19049",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b7ea2b7283b12508",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-004387df5cef9b5f5",
            "owner_id": "982081069425",
            "tags": {
              "Name": "EKS-cluster's"
            },
            "tags_all": {
              "Name": "EKS-cluster's"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}